# lela-ai

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  coverage.json  main.py  pyproject.toml  ruff.toml
dev/testing/: test_feedback_loop.py  test_integration_sprint2_components.py  test_result_manager.py  test_supervisor_evaluation.py  test_worker_execution.py  test_worker_executor.py
dev/testing/components/: test_feedback_manager.py  test_instruction_manager.py  test_llm_provider.py  test_requirement_comparator.py
dev/testing/core/: test_pod_message_queue.py  test_workflow_orchestrator.py
dev/testing/integration/: README.md  test_advanced_integration.py  test_primitives_integration.py
dev/testing/primitives/: test_config_loader.py  test_file_reader.py  test_file_writer.py  test_gap_extractor.py  test_json_validator.py  test_llm_client.py  test_logger.py  test_path_resolver.py  test_timestamp_generator.py
src/: __init__.py
src/components/: feedback_manager.py  instruction_manager.py  llm_provider.py  requirement_comparator.py  result_manager.py  worker_executor.py
src/core/: __init__.py  performance_tracker.py  pod_message_queue.py  pod_state_manager.py  workflow_dependency_graph.py  workflow_orchestrator.py
src/features/: __init__.py  feedback_loop.py  supervisor_evaluation.py  worker_execution.py
src/primitives/: __init__.py  config_loader.py  file_reader.py  file_writer.py  gap_extractor.py  json_validator.py  llm_client.py  logger.py  path_resolver.py  timestamp_generator.py
