[project]
name = "lela-ai"
version = "0.1.0"
description = "Composable agent harness with pod-based architecture for LLM-agnostic task orchestration"
requires-python = ">=3.11"
dependencies = [
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["dev/testing"]
