[project]
name = "lela-ai"
version = "0.1.0"
description = "Composable agent harness with pod-based architecture for LLM-agnostic task orchestration"
requires-python = ">=3.11"
dependencies = [
    "structlog>=25.5.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "jsonschema>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["dev/testing"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 100
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "dev/coverage-report"
